Closed Bug 183965 Opened 22 years ago Closed 22 years ago

assertions when running news urls

Categories

(MailNews Core :: Networking: NNTP, defect)

x86
Windows 2000
defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: sspitzer, Assigned: sspitzer)

Details

Attachments

(1 file)

assertions when running news urls for example: nsNntpService::DecomposeNewsMessageURI(const char * 0x0012c3e8, nsIMsgFolder * * 0x0012c2b4, unsigned int * 0x0012c2b8) line 600 nsNntpService::GetProtocolForUri(nsIURI * 0x03bd0cfc, nsIMsgWindow * 0x03a06650, nsINNTPProtocol * * 0x0012c458) line 1225 + 58 bytes nsNntpService::RunNewsUrl(nsIURI * 0x03bd0cfc, nsIMsgWindow * 0x03a06650, nsISupports * 0x00000000) line 1265 + 40 bytes nsNntpService::UpdateCounts(nsNntpService * const 0x03dc03b0, nsINntpIncomingServer * 0x03dbfe60, nsIMsgWindow * 0x03a06650) line 1647 + 23 bytes nsNntpIncomingServer::PerformExpand(nsNntpIncomingServer * const 0x03dbfe00, nsIMsgWindow * 0x03a06650) line 615 + 55 bytes XPTC_InvokeByIndex(nsISupports * 0x03dbfe00, unsigned int 59, unsigned int 1, nsXPTCVariant * 0x0012c6a4) line 106 XPCWrappedNative::CallMethod(XPCCallContext & {...}, XPCWrappedNative::CallMode CALL_METHOD) line 2016 + 42 bytes XPC_WN_CallMethod(JSContext * 0x01090478, JSObject * 0x03d4eb80, unsigned int 1, long * 0x04bf7f58, long * 0x0012c980) line 1294 + 14 bytes js_Invoke(JSContext * 0x01090478, unsigned int 1, unsigned int 0) line 839 + 23 bytes js_Interpret(JSContext * 0x01090478, long * 0x0012d7c8) line 2803 + 15 bytes js_Invoke(JSContext * 0x01090478, unsigned int 1, unsigned int 2) line 856 + 13 bytes nsXPCWrappedJSClass::CallMethod(nsXPCWrappedJSClass * const 0x0307f7d8, nsXPCWrappedJS * 0x03f1b9a8, unsigned short 3, const nsXPTMethodInfo * 0x01669148, nsXPTCMiniVariant * 0x0012dd14) line 1200 + 22 bytes nsXPCWrappedJS::CallMethod(nsXPCWrappedJS * const 0x03f1b9a8, unsigned short 3, const nsXPTMethodInfo * 0x01669148, nsXPTCMiniVariant * 0x0012dd14) line 430 PrepareAndDispatch(nsXPTCStubBase * 0x03f1b9a8, unsigned int 3, unsigned int * 0x0012ddc4, unsigned int * 0x0012ddb4) line 115 + 31 bytes SharedStub() line 139 nsEventListenerManager::HandleEventSubType(nsListenerStruct * 0x03f1ba20, nsIDOMEvent * 0x04d15908, nsIDOMEventTarget * 0x03f32388, unsigned int 4, unsigned int 4) line 1219 + 20 bytes nsEventListenerManager::HandleEvent(nsEventListenerManager * const 0x0302fee8, nsIPresContext * 0x02e52b18, nsEvent * 0x0012f274, nsIDOMEvent * * 0x0012f174, nsIDOMEventTarget * 0x03f32388, unsigned int 4, nsEventStatus * 0x0012f5b4) line 1388 + 36 bytes nsXULElement::HandleDOMEvent(nsXULElement * const 0x03029ec0, nsIPresContext * 0x02e52b18, nsEvent * 0x0012f274, nsIDOMEvent * * 0x0012f174, unsigned int 4, nsEventStatus * 0x0012f5b4) line 3377 nsXULElement::HandleDOMEvent(nsXULElement * const 0x03a783c8, nsIPresContext * 0x02e52b18, nsEvent * 0x0012f274, nsIDOMEvent * * 0x0012f174, unsigned int 4, nsEventStatus * 0x0012f5b4) line 3357 nsXULElement::HandleDOMEvent(nsXULElement * const 0x03d68a68, nsIPresContext * 0x02e52b18, nsEvent * 0x0012f274, nsIDOMEvent * * 0x0012f174, unsigned int 4, nsEventStatus * 0x0012f5b4) line 3357 nsXULElement::HandleDOMEvent(nsXULElement * const 0x0396b490, nsIPresContext * 0x02e52b18, nsEvent * 0x0012f274, nsIDOMEvent * * 0x0012f174, unsigned int 7, nsEventStatus * 0x0012f5b4) line 3357 PresShell::HandleEventInternal(nsEvent * 0x0012f274, nsIView * 0x00000000, unsigned int 1, nsEventStatus * 0x0012f5b4) line 6127 + 47 bytes PresShell::HandleEventWithTarget(PresShell * const 0x02e72110, nsEvent * 0x0012f274, nsIFrame * 0x03d6c800, nsIContent * 0x0396b490, unsigned int 1, nsEventStatus * 0x0012f5b4) line 6096 + 22 bytes nsEventStateManager::CheckForAndDispatchClick(nsIPresContext * 0x02e52b18, nsMouseEvent * 0x0012f7bc, nsEventStatus * 0x0012f5b4) line 2878 + 66 bytes nsEventStateManager::PostHandleEvent(nsEventStateManager * const 0x02ef4cd8, nsIPresContext * 0x02e52b18, nsEvent * 0x0012f7bc, nsIFrame * 0x03d6c800, nsEventStatus * 0x0012f5b4, nsIView * 0x03d6d8c0) line 1871 + 23 bytes PresShell::HandleEventInternal(nsEvent * 0x0012f7bc, nsIView * 0x03d6d8c0, unsigned int 1, nsEventStatus * 0x0012f5b4) line 6163 + 43 bytes PresShell::HandleEvent(PresShell * const 0x02e72114, nsIView * 0x03d6d8c0, nsGUIEvent * 0x0012f7bc, nsEventStatus * 0x0012f5b4, int 0, int & 1) line 6050 + 25 bytes nsViewManager::HandleEvent(nsView * 0x03d6d8c0, nsGUIEvent * 0x0012f7bc, int 0) line 2209 nsView::HandleEvent(nsViewManager * 0x02e51698, nsGUIEvent * 0x0012f7bc, int 0) line 304 nsViewManager::DispatchEvent(nsViewManager * const 0x02e51698, nsGUIEvent * 0x0012f7bc, nsEventStatus * 0x0012f6b8) line 1943 + 23 bytes HandleEvent(nsGUIEvent * 0x0012f7bc) line 83 nsWindow::DispatchEvent(nsWindow * const 0x03d6d96c, nsGUIEvent * 0x0012f7bc, nsEventStatus & nsEventStatus_eIgnore) line 1070 + 10 bytes nsWindow::DispatchWindowEvent(nsGUIEvent * 0x0012f7bc) line 1091 nsWindow::DispatchMouseEvent(unsigned int 301, unsigned int 0, nsPoint * 0x00000000) line 5293 + 21 bytes ChildWindow::DispatchMouseEvent(unsigned int 301, unsigned int 0, nsPoint * 0x00000000) line 5550 nsWindow::ProcessMessage(unsigned int 514, unsigned int 0, long 20709385, long * 0x0012fc48) line 4024 + 28 bytes nsWindow::WindowProc(HWND__ * 0x00140452, unsigned int 514, unsigned int 0, long 20709385) line 1339 + 27 bytes USER32! 77e3a290() USER32! 77e145b1() USER32! 77e1a752() nsAppShellService::Run(nsAppShellService * const 0x010777c8) line 472 main1(int 2, char * * 0x00284e00, nsISupports * 0x00276f08) line 1541 + 32 bytes main(int 2, char * * 0x00284e00) line 1902 + 37 bytes mainCRTStartup() line 338 + 17 bytes KERNEL32! 77e9ca90() this happened on dec 3, with the checkin for #179162 see http://bonsai.mozilla.org/cvsview2.cgi? diff_mode=context&whitespace_mode=show&file=nsNntpService.cpp&root=/cvsroot&subd ir=mozilla/mailnews/news/src&command=DIFF_FRAMESET&rev1=1.226&rev2=1.227 I've got the fix, which is to turn of more code that isn't ready yet. I've also added code that when this is turned on, we will check the action of the url, and only call DecomposeNewsMessageURI() if it is a actionfetch or actionfetch part. patching coming...
Seth, would it be too much additional work to include a fix for bug 129574, while you're here doing cleanup?
> Seth, would it be too much additional work to include a fix for bug 129574, > while you're here doing cleanup? I've taken that discussion private.
Comment on attachment 108522 [details] [diff] [review] patch sr=bienvenu
Attachment #108522 - Flags: superreview+
Comment on attachment 108522 [details] [diff] [review] patch seeking approval.
Attachment #108522 - Flags: approval1.3a?
How about r=? I'll approve in the morning with that. /be
Attachment #108522 - Flags: review?(dmose)
fixed on trunk
Status: NEW → RESOLVED
Closed: 22 years ago
Resolution: --- → FIXED
Comment on attachment 108522 [details] [diff] [review] patch r and a not needed (r/sr=bienvenu)
Attachment #108522 - Flags: review?(dmose)
Attachment #108522 - Flags: approval1.3a?
Verified FIXED with the trunk, running auto-subscribe urls (news://news.mozilla.org/netscape.public.mozilla.mail-news) and expired article removal urls on Windows 2000 (debug).
Status: RESOLVED → VERIFIED
Product: MailNews → Core
Product: Core → MailNews Core
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: