fix for bug #183965.  assertions and problems when running news urls. caused by the checkin for #179162.  r/sr=bienvenu